test/spec_vectors/simd_bitwise/fail/module_7.wat
(module (func (result v128) (v128.or (i32.const 0) (i32.const 0))))